fixed search results spacing issue

--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@ p a:hover{
     flex-direction: column;
     display: none;
     border-radius: 10px;
-    top: 5%;
+    top: 105%;
     left: 3%;
     z-index: 3;
     width: 95%;
